2012-01-10  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] DRT crashes with Qt 5
        https://bugs.webkit.org/show_bug.cgi?id=75951

        Reviewed by Ossy.

        * DumpRenderTree/qt/fonts.conf: Add missing last-resort font fallback for Qt 5 where
        Qt relies on font-config to define the default font family.

2012-01-10  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] REGRESSION(r100130): Clean build feature is broken.
        https://bugs.webkit.org/show_bug.cgi?id=75863

        Reviewed by Tor Arne Vestbø.

        * Scripts/webkitdirs.pm:
        (buildQMakeProject):

2012-01-10  Zeno Albisser  <zeno@webkit.org>

        [Qt][WK2] Fix keyboard shortcuts in MiniBrowser.
        https://bugs.webkit.org/show_bug.cgi?id=75885

        In QML events are propagated through parents. But since the
        WebView may consume key events, a shortcut might never reach
        the top QtQuickItem.
        Therefore an application wide event handling function in C++
        needs to take care of shortcuts for MiniBrowser.

        Reviewed by Kenneth Rohde Christiansen.

        * MiniBrowser/qt/BrowserWindow.cpp:
        (BrowserWindow::reload):
        (BrowserWindow::focusAddressBar):
        * MiniBrowser/qt/BrowserWindow.h:
        * MiniBrowser/qt/MiniBrowserApplication.cpp:
        (MiniBrowserApplication::notify):
        * MiniBrowser/qt/qml/BrowserWindow.qml:

2012-01-10  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Add --efl alias for --platform=efl to run-webkit-test
        https://bugs.webkit.org/show_bug.cgi?id=75937

        Reviewed by Andreas Kling.
        
        * Scripts/run-webkit-tests: Add --efl alias.
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py: Add --efl alias.
        (parse_args):

2012-01-09  Dan Bernstein  <mitz@apple.com>

        -[DOMRange renderedImageForcingBlackText:] fails with non-user-selectable text
        https://bugs.webkit.org/show_bug.cgi?id=75920

        Reviewed by Darin Adler.