@@ -1,3 +1,15 @@
+2012-01-10  Alexander Færøy  <alexander.faeroy@nokia.com>
+
+        [Qt] Don't expose m_windowOptions as part of the public interface in MiniBrowserApplication
+        https://bugs.webkit.org/show_bug.cgi?id=75894
+
+        Reviewed by Tor Arne Vestbø.
+
+        * MiniBrowser/qt/MiniBrowserApplication.h:
+        (MiniBrowserApplication::windowOptions):
+        * MiniBrowser/qt/main.cpp:
+        (main):
+
 2012-01-10  Simon Hausmann  <simon.hausmann@nokia.com>
 
         [Qt] DRT crashes with Qt 5
